--- a/todo/pubspec.yaml
+++ b/todo/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   hive: ^2.2.1
   hive_flutter: ^1.1.0
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
